<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zion_zed_ros2_interface</name>
  <version>0.0.0</version>
  <description>zedm camera launching interface for zion exo-skeleton system</description>
  <maintainer email="nimicu21@gmail.com">nimrod</maintainer>
  <license>Apache License 2.0</license>
	<url type="repository">https://github.com/nimiCurtis/zion_zed_ros2_interface.git</url>

<!-- Declare ROS2 package build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

<!-- Declare ROS2 package testing tools -->
 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

<!-- Declares ROS2 package name that is needed as part of some build interface it exports -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
